@@ -1,0 +1,9 @@
+package test.junit4.issue2792;
+
+import org.junit.Test;
+
+public class TestClassSample {
+
+  @Test
+  public void testMethod() {}
+}
